--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,12 +8,12 @@
 		<title>OpenUI5 Basic Template</title>
 
 		<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
+			src="http://localhost:8000/openui5/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-preload="async"
-			data-sap-ui-resourceroots='{"sap.ui.demo.basicTemplate": "./"}'>
+			data-sap-ui-resourceroots='{"iamsoft.agroeco": "./"}'>
 		</script>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -23,7 +23,7 @@
 				new sap.m.Shell({
 					app: new sap.ui.core.ComponentContainer({
 						height : "100%",
-						name : "sap.ui.demo.basicTemplate"
+						name : "iamsoft.agroeco"
 					})
 				}).placeAt("content");
 			});
