--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
 		<title>OpenUI5 Basic Template</title>
 
 		<script id="sap-ui-bootstrap"
-			src="http://localhost:8000/openui5/resources/sap-ui-core.js"
+			src="../../openui5/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
