Formatter for list status implemented and test cases added.

--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
 
     <script id="sap-ui-bootstrap"
-            src="../../resources/sap-ui-core.js"
+            src="../../../../openui5/resources/sap-ui-core.js"
             data-sap-ui-libs="sap.m"
             data-sap-ui-resourceroots='{
-				"iamsoft/agroeco": "../../",
-				"test/unit": "./"
+				"iamsoft.agroeco": "../../",
+				"test.unit": "./"
 			}'>
     </script>
 
