Adaptation of index page for integration tests.

--- a/webapp/test/integration/opaTests.qunit.html
+++ b/webapp/test/integration/opaTests.qunit.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 
 	<script id="sap-ui-bootstrap"
-			src="../../resources/sap-ui-core.js"
+            src="../../../../openui5/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
 				"iamsoft.agroeco.test.integration": "./",
 				"iamsoft.agroeco.app" : "../../index"
